--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,11 @@ body {
 	width: 20px;
 }
 
+/* .img-fluid {
+  max-width: 100%;
+	height: 100%;
+} */
+
 #about {
 	display: flex;
 	background-color: #F6D2B8;
