--- a/assets/style.css
+++ b/assets/style.css
@@ -89,6 +89,7 @@ body {
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	font-size: 24px;
 }
 #about-me p {
 	width: 80%;
@@ -105,13 +106,17 @@ body {
 .gallery .nav {
 	justify-content: center;
 }
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+.nav-pills .nav-link.active.active-tag, .nav-pills .show > .nav-link {
 	color: #fff;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
+.nav-link:hover {
+	cursor: pointer;
+	color: #000 !important;
+}
 .nav-pills .nav-link {
-	color: #000
+	color: #000;
 }
 .item-column {
 	position: relative;
@@ -152,7 +157,7 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-
+	font-size: 24px;
 }
 .quote__author {
 	font-family: Spectral;
